MAINTENANCE  maven max heap space to 2g